--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.2.0
   firebase_auth: ^1.2.0
+  firebase_storage: ^8.1.0
+  cloud_firestore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
