--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^1.2.0
   firebase_storage: ^8.1.0
   cloud_firestore: ^2.2.0
+  progress_indicator_button: ^0.0.3
 
 dev_dependencies:
   flutter_test:
